11 setup of spring boot (#13)
* starting to set up spring boot

* is that better?

* web server is running successfully

* web server is running successfully

* oh my god, i am so stupid. Troubleshooting for hours only for the issue to be in the module-info.java

* don't need that

* Product Model

* basics are done

* proof-of-concept done

* fix merge conflict

---------

Co-authored-by: Benjamin Lang <benjamin.lang@srh.university.de>